# ChangeLog for dev-python/bicyclerepair
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/bicyclerepair/ChangeLog,v 1.14 2007/03/05 02:40:53 genone Exp $

  05 Mar 2007; Marius Mauch <genone@gentoo.org> bicyclerepair-0.7.1.ebuild,
  bicyclerepair-0.7.1-r1.ebuild, bicyclerepair-0.9.ebuild:
  Replacing einfo with elog

  21 Feb 2007; Lukasz Strzygowski <lucass@gentoo.org>
  files/digest-bicyclerepair-0.7.1, files/digest-bicyclerepair-0.7.1-r1,
  Manifest:
  Fixed missing chksums.

  01 Aug 2006; Tom Gall <tgall@gentoo.org> bicyclerepair-0.9.ebuild:
  added ~ppc64

  01 Apr 2006; Aron Griffis <agriffis@gentoo.org> bicyclerepair-0.9.ebuild:
  Mark 0.9 ~ia64

  19 Nov 2005; <dang@gentoo.org> bicyclerepair-0.9.ebuild:
  Marked ~amd64

*bicyclerepair-0.9 (12 Feb 2005)

  12 Feb 2005; Bryan Østergaard <kloeri@gentoo.org>
  +bicyclerepair-0.9.ebuild:
  Version bump.

  30 Dec 2004; Ciaran McCreesh <ciaranm@gentoo.org> :
  Change encoding to UTF-8 for GLEP 31 compliance

  04 May 2004; Bryan Østergaard <kloeri@gentoo.org>
  bicyclerepair-0.7.1.ebuild:
  Remove default S.

  15 Jan 2004; Rob Cakebread <pythonhead@gentoo.org>
  bicyclerepair-0.7.1-r1.ebuild:
  Added more einfo for [x]emacs users

*bicyclerepair-0.7.1-r1 (15 Jan 2004)

  15 Jan 2004; Rob Cakebread <pythonhead@gentoo.org>
  bicyclerepair-0.7.1-r1.ebuild:
  Added bike.el file for [x]emacs users and info for IDLE integration. Bug #38191

*bicyclerepair-0.7.1 (08 Mar 2003)

  04 Apr 2003; Alastair Tse <liquidx@gentoo.org> bicyclerepair-0.7.1.ebuild:
  bump to stable

  08 Mar 2003; Alastair Tse <liquidx@gentoo.org> bicyclerepair-0.7.1.ebuild:
  initial ebuild. thanks to Lin Zhemin <ljm@ljm.idv.tw> (#16448)
